--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-sass": "^5.0.0",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
+    "react-alice-carousel": "^2.5.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
